force-app/main/default/objects/PS_Task__c/PS_Task__c.object-meta.xml
<CustomObject>
    <description>SOX object - This object is used to track the task performed as part of PS Project</description>
    <label>PS Task</label>
    <nameField>
        <displayFormat>PST-{0000000}</displayFormat>
        <label>PS Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>