force-app/main/default/objects/PS_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PS Tasks</relationshipLabel>
    <relationshipName>PS_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>