force-app/main/default/objects/PS_Task__c/fields/Actual_End_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_date__c</fullName>
    <description>Actual end date gives us the data which is the farthest between end date and extended end date.</description>
    <formula>IF(Extended_End_date__c &gt; Task_End_date__c, 
   Extended_End_date__c, 
   Task_End_date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual end date gives us the data which is the farthest between end date and extended end date.</inlineHelpText>
    <label>Actual End date</label>
    <type>Date</type>
</CustomField>