force-app/main/default/objects/PS_Task__c/fields/Approved_Hours__c.field-meta.xml
<CustomField>
    <fullName>Approved_Hours__c</fullName>
    <formula>IF(ISPICKVAL(Task_Type__c,&apos;T&amp;E&apos;) &amp;&amp; NOT(ISBLANK(Related_PS_Task__c)),
  Related_PS_Task__r.Hidden_Task_Completion_Non_TE__c 
,
 Hidden_Task_Completion_Non_TE__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>