force-app/main/default/objects/PS_Task__c/fields/Billable_Hours_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Approved__c</fullName>
    <label>Billable Hours Approved</label>
    <summarizedField>PS_Time_Entry__c.Hours_Spent__c</summarizedField>
    <summaryFilterItems>
        <field>PS_Time_Entry__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PS_Time_Entry__c.Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_Time_Entry__c.PS_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>