force-app/main/default/objects/PS_Task__c/fields/Billable_Hours_Expected__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Expected__c</fullName>
    <description>Expected billable hours for this task</description>
    <label>Billable Hours Purchased</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>