force-app/main/default/objects/PS_Task__c/fields/Billable_Hours_locked__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_locked__c</fullName>
    <label>Billable Hours locked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>