force-app/main/default/objects/PS_Task__c/fields/Completed_in_NS_stamp__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_NS_stamp__c</fullName>
    <businessOwnerGroup>Data_Owner_PS_Team</businessOwnerGroup>
    <description>MKT24-747 - Field is stamped from NS based on the % completed at cut off period.</description>
    <label>% Completed in NS stamp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>