force-app/main/default/objects/PS_Task__c/fields/Consult_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Consult_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>