force-app/main/default/objects/PS_Task__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <formula>Project__r.CSAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <type>Checkbox</type>
</CustomField>