force-app/main/default/objects/PS_Task__c/fields/Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Month__c</fullName>
    <formula>DAY(DATEVALUE(NOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>