force-app/main/default/objects/PS_Task__c/fields/Do_Not_Send_Expiration_Notice__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Expiration_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Expiration Notice</label>
    <type>Checkbox</type>
</CustomField>