force-app/main/default/objects/PS_Task__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the task</description>
    <inlineHelpText>End date of the task</inlineHelpText>
    <label>Task Completed Date</label>
    <type>Date</type>
</CustomField>