force-app/main/default/objects/PS_Task__c/fields/End_Date_in_NS_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date_in_NS_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_PS_Team</businessOwnerGroup>
    <description>MKT24-747</description>
    <label>End Date in NS (Date)</label>
    <type>Date</type>
</CustomField>