force-app/main/default/objects/PS_Task__c/fields/Extended_End_date__c.field-meta.xml
<CustomField>
    <fullName>Extended_End_date__c</fullName>
    <label>Extended End date</label>
    <type>Date</type>
</CustomField>