force-app/main/default/objects/PS_Task__c/fields/Extension_Reason__c.field-meta.xml
<CustomField>
    <fullName>Extension_Reason__c</fullName>
    <label>Extension Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>