force-app/main/default/objects/PS_Task__c/fields/Hidden_Resident_Engineer_Hrs_25__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Resident_Engineer_Hrs_25__c</fullName>
    <formula>IF(( DATE( YEAR( TODAY() ) , MONTH( TODAY() ), IF(DAY(TODAY())&gt; 25, 25,DAY(TODAY())) ) - Task_Start_Date__c ) / ((Actual_End_date__c - Task_Start_Date__c )+1)&lt;0,0,DATE( YEAR( TODAY() ) , MONTH( TODAY() ), IF(DAY(TODAY())&gt;25,25,DAY(TODAY()))) - Task_Start_Date__c ) / ((Actual_End_date__c - Task_Start_Date__c )+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Resident Engineer Hrs 25</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>