force-app/main/default/objects/PS_Task__c/fields/Hidden_Task_Completed_After_25__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Task_Completed_After_25__c</fullName>
    <formula>YEAR(End_Date__c) = YEAR(TODAY()) &amp;&amp; MONTH(End_Date__c) = MONTH(TODAY()) &amp;&amp; End_Date__c &gt; DATE( YEAR( TODAY() ) , MONTH( TODAY() ), 25 ) &amp;&amp; NOT(ISBLANK(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hidden Task Completed After 25</label>
    <type>Checkbox</type>
</CustomField>