force-app/main/default/objects/PS_Task__c/fields/Hidden_Task_Completion_Non_TE__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Task_Completion_Non_TE__c</fullName>
    <formula>IF(
	AND(ISBLANK(Actual_End_date__c), CONTAINS(TEXT(Task_Type__c), &apos;Resident Engineer&apos;)), 
	0,
	IF( AND( Today() &gt; Actual_End_date__c, NOT(ISPICKVAL(Task_Status__c, &apos;Cancelled&apos;))),
		IF( (ISPICKVAL( Revenue_Type__c, &apos;Paid Upon Delivery&apos; ) &amp;&amp; Line_Value__c != 0 ), 
			IF( CONTAINS(TEXT(Task_Type__c), &apos;Resident Engineer&apos;), 
				1 , 
IF( NOT(ISPICKVAL(Task_Type__c,&apos;Migration&apos;)), Hours_Consumed__c, IF( ISBLANK(End_Date__c), 0, 1 ) )
				
			)
		,1),
		IF( (ISPICKVAL(Task_Status__c, &apos;Completed&apos;)|| ISPICKVAL(Task_Status__c, &apos;Closed Short&apos;)) &amp;&amp; (NOT(ISPICKVAL(Revenue_Type__c, &apos;Paid Upon Delivery&apos;)) || (ISPICKVAL(Revenue_Type__c, &apos;Paid Upon Delivery&apos;) &amp;&amp; Line_Value__c = 0 )&amp;&amp; NOT(ISPICKVAL(Task_Status__c, &apos;Cancelled&apos;))), 
		1,
			IF(
				CONTAINS(TEXT(Task_Type__c), &apos;Resident Engineer&apos;), 
				IF(Test_Field_Hrs__c &gt; 1, 1, Test_Field_Hrs__c),
				IF( NOT(ISPICKVAL(Task_Type__c,&apos;Migration&apos;)), 
					Hours_Consumed__c,
					IF( AND(ISPICKVAL(Task_Type__c,&apos;Migration&apos;),ISPICKVAL(Task_Status__c,&apos;Completed&apos;)),1,0)
				)
			)	
		)
	)  
)</formula>
    <label>Hidden Task Completion Non TE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>