force-app/main/default/objects/PS_Task__c/fields/Hours_Consumed_Locked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Consumed_Locked__c</fullName>
    <description>DO NOT PLACE IN PAGE LAYOUT</description>
    <formula>IF(( Billable_Hours_locked__c / Billable_Hours_Expected__c)&gt;1,1,( Billable_Hours_locked__c / Billable_Hours_Expected__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT PLACE IN PAGE LAYOUT</inlineHelpText>
    <label>Hidden % Hours Consumed Locked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>