force-app/main/default/objects/PS_Task__c/fields/Last_Sync_to_NS_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_to_NS_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_PS_Team</businessOwnerGroup>
    <description>MKT24 - 840 - Stores the timestamp when data was last pushed to NS. Populated from SFDC &lt;&gt; NS Integration Job</description>
    <label>Last Sync to NS Date</label>
    <type>DateTime</type>
</CustomField>