force-app/main/default/objects/PS_Task__c/fields/Line_Value__c.field-meta.xml
<CustomField>
    <fullName>Line_Value__c</fullName>
    <description>DO NOT ADD TO PAGE LAYOUT</description>
    <formula>Order_Item__r.UnitPrice *  Order_Item__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT ADD TO PAGE LAYOUT</inlineHelpText>
    <label>Hidden Line Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>