force-app/main/default/objects/PS_Task__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>