force-app/main/default/objects/PS_Task__c/fields/Non_Billable_Hours_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Hours_Rejected__c</fullName>
    <label>Non Billable Hours Rejected</label>
    <summarizedField>PS_Time_Entry__c.Hours_Spent__c</summarizedField>
    <summaryFilterItems>
        <field>PS_Time_Entry__c.Billable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PS_Time_Entry__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_Time_Entry__c.PS_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>