force-app/main/default/objects/PS_Task__c/fields/NS_Sync_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>NS_Sync_Status_Message__c</fullName>
    <businessOwnerGroup>Data_Owner_PS_Team</businessOwnerGroup>
    <description>MKT24 - 840 - Stores the success/error message received from NS. Populated from SFDC &lt;&gt; NS Integration Job</description>
    <label>NS Sync Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>