force-app/main/default/objects/PS_Task__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>Order_Item__r.Order.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order #</label>
    <type>Text</type>
</CustomField>