force-app/main/default/objects/PS_Task__c/fields/Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>PS Tasks</relationshipLabel>
    <relationshipName>PS_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>