force-app/main/default/objects/PS_Task__c/fields/order_item_id__c.field-meta.xml
<CustomField>
    <fullName>order_item_id__c</fullName>
    <formula>CASESAFEID(Order_Item__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>order item id(PS)</label>
    <type>Text</type>
</CustomField>