force-app/main/default/objects/PS_Task__c/fields/POC_on_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>POC_on_Last_Sync__c</fullName>
    <label>POC on Last Sync</label>
    <type>DateTime</type>
</CustomField>