force-app/main/default/objects/PS_Task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>PS Project related to this Task</description>
    <inlineHelpText>PS Project related to this Task</inlineHelpText>
    <label>Project</label>
    <referenceTo>PS_Project__c</referenceTo>
    <relationshipLabel>PS Tasks</relationshipLabel>
    <relationshipName>PS_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>