force-app/main/default/objects/PS_Task__c/fields/Project_Expiration_SKU__c.field-meta.xml
<CustomField>
    <fullName>Project_Expiration_SKU__c</fullName>
    <description>DO NOT ADD TO PAGE LAYOUT</description>
    <formula>Order_Product__c = &apos;RBK-INSTALL&apos; || Order_Product__c = &apos;RBK-CONSULT&apos; || CONTAINS(Order_Product__c , &apos;_PD&apos;) || CONTAINS(Order_Product__c , &apos;-PD&apos;)</formula>
    <inlineHelpText>DO NOT ADD TO PAGE LAYOUT</inlineHelpText>
    <label>Hidden Project Expiration SKU</label>
    <type>Checkbox</type>
</CustomField>