force-app/main/default/objects/PS_Task__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>DO NOT ADD TO PAGE LAYOUT</description>
    <formula>TEXT(Project__r.Project_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT ADD TO PAGE LAYOUT</inlineHelpText>
    <label>Hidden Project Status</label>
    <type>Text</type>
</CustomField>