force-app/main/default/objects/PS_Task__c/fields/Related_PS_Task__c.field-meta.xml
<CustomField>
    <fullName>Related_PS_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related PS Task</label>
    <referenceTo>PS_Task__c</referenceTo>
    <relationshipLabel>PS Tasks</relationshipLabel>
    <relationshipName>PS_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>