force-app/main/default/objects/PS_Task__c/fields/Required_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Id__c</fullName>
    <formula>Order_Item__r.SBQQ__RequiredBy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Id</label>
    <type>Text</type>
</CustomField>