force-app/main/default/objects/PS_Task__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Upon Delivery</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
                <default>true</default>
                <label>Prepaid</label>
            </value>
            <value>
                <fullName>RES</fullName>
            </value>
            <value>
                <fullName>No Revenue</fullName>
            </value>
            <value>
                <fullName>T&amp;E</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>