force-app/main/default/objects/PS_Task__c/fields/Special_Handling_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Instructions__c</fullName>
    <label>Special Handling Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>