force-app/main/default/objects/PS_Task__c/fields/Sync_to_Net_Suite__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Net_Suite__c</fullName>
    <label>Sync to Net Suite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync to NetSuite</fullName>
                <default>true</default>
                <label>Sync to NetSuite</label>
            </value>
            <value>
                <fullName>Sync Complete</fullName>
            </value>
            <value>
                <fullName>Queued for Net Suite Sync</fullName>
            </value>
            <value>
                <fullName>Sync Failed</fullName>
            </value>
            <value>
                <fullName>No Sync Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>