force-app/main/default/objects/PS_Task__c/fields/Task_End_date__c.field-meta.xml
<CustomField>
    <fullName>Task_End_date__c</fullName>
    <label>Task End date</label>
    <type>Date</type>
</CustomField>