force-app/main/default/objects/PS_Task__c/fields/Task_Expired__c.field-meta.xml
<CustomField>
    <fullName>Task_Expired__c</fullName>
    <formula>IF( !ISBLANK(Extended_End_date__c), Extended_End_date__c &lt; TODAY(),Task_End_date__c &lt; TODAY()) &amp;&amp; Billable_Hours_Approved__c &lt; Billable_Hours_Expected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Expired</label>
    <type>Checkbox</type>
</CustomField>