force-app/main/default/objects/PS_Task__c/fields/Task_ID_PS__c.field-meta.xml
<CustomField>
    <fullName>Task_ID_PS__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task ID(PS)</label>
    <type>Text</type>
</CustomField>