force-app/main/default/objects/PS_Task__c/fields/Task_Label__c.field-meta.xml
<CustomField>
    <fullName>Task_Label__c</fullName>
    <label>Task Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>