force-app/main/default/objects/PS_Task__c/fields/Task_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Start_Date__c</fullName>
    <label>Task Start Date</label>
    <type>Date</type>
</CustomField>