force-app/main/default/objects/PS_Task__c/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <description>Status of the PS Task</description>
    <inlineHelpText>Status of the PS Task</inlineHelpText>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_Status</valueSetName>
    </valueSet>
</CustomField>