force-app/main/default/objects/PS_Task__c/fields/Task_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Task_Subtype__c</fullName>
    <label>Task Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Task_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Enablement</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>